syntax = "proto3";

package secret_info;

message Request { }

message Response {
  string secret = 1;
}

service SecretService {
  rpc GetSecret(Request) returns (Response);
}